Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
 								<article>
 									<header>
 										
-										<h2><a href="#">Tableuo Dashboards<br />
+										<h2><a href="https://github.com/Mo-Wahbi/Portfolio-Projects/blob/main/Data%20Professional%20Survey%20Breakdown.pbit">Power BI Dashboards<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/Demographics.png" alt="" /></a>
-									<p>A show of my Tableau dashbords </p>
+									<a href="https://github.com/Mo-Wahbi/Portfolio-Projects/blob/main/Data%20Professional%20Survey%20Breakdown.pbit" class="image fit"><img src="images/Demographics.png" alt="" /></a>
+									<p>A power BI dashbord </p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
+										<li><a href="https://github.com/Mo-Wahbi/Portfolio-Projects/blob/main/Data%20Professional%20Survey%20Breakdown.pbit" class="button">View Project</a></li>
 									</ul>
 								</article>
 								
@@ -134,11 +134,11 @@
 							</section>
 							<section>
 								<h3>Phone</h3>
-								<p><a href="+971567149129">(971) 567149129</a></p>
+								<p><a href="#">(971) 567149129</a></p>
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="Mohammmed.Ahmedwahbi@gmail.com">Mohammmed.Ahmedwahbi@gmail.com</a></p>
+								<p><a href="#">Mohammmed.Ahmedwahbi@gmail.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
@@ -175,4 +175,5 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
+
 </html>
