Fix HTML formatting and update project links

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 										<h2><a href="https://github.com/Mo-Wahbi/Portfolio-Projects/blob/main/EDA%20in%20Pandas.ipynb">Python projects <br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/Mo-Wahbi/Portfolio-Projects/blob/main/EDA%20in%20Pandas.ipynb" class="image fit"><img src="images/Data Professional Survey Breakdown dasahboard screenshot.png" alt="" /></a>
+									<a href="https://github.com/Mo-Wahbi/Portfolio-Projects/blob/main/EDA%20in%20Pandas.ipynb" class="image fit"><img src="EDA in python.png" alt="" /></a>
 									<p>  EDA and dashboards with Python   </p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Mo-Wahbi/Portfolio-Projects/blob/main/EDA%20in%20Pandas.ipynb" class="button">View Project</a></li>
@@ -75,7 +75,7 @@
 										<h2><a href="https://github.com/Mo-Wahbi/Portfolio-Projects/blob/main/Data%20Professional%20Survey%20Breakdown.pbit">Power BI Dashboards<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/Mo-Wahbi/Portfolio-Projects/blob/main/Data%20Professional%20Survey%20Breakdown.pbit" class="image fit"><img src="images/Demographics.png" alt="" /></a>
+									<a href="https://github.com/Mo-Wahbi/Portfolio-Projects/blob/main/Data%20Professional%20Survey%20Breakdown.pbit" class="image fit"><img src="images/Data Professional Survey Breakdown.png" alt="" /></a>
 									<p>A power BI dashbord </p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Mo-Wahbi/Portfolio-Projects/blob/main/Data%20Professional%20Survey%20Breakdown.pbit" class="button">View Project</a></li>
@@ -177,3 +177,4 @@
 	</body>
 
 </html>
+
