--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 										<h2><a href="https://github.com/Mo-Wahbi/Portfolio-Projects/blob/main/Data%20Professional%20Survey%20Breakdown.pbit">Power BI Dashboards<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/Mo-Wahbi/Portfolio-Projects/blob/main/Data%20Professional%20Survey%20Breakdown.pbit" class="image fit"><img src="images/Data Professional Survey Breakdown.png" alt="" /></a>
+									<a href="https://github.com/Mo-Wahbi/Portfolio-Projects/blob/main/Data%20Professional%20Survey%20Breakdown.pbit" class="image fit"><img src="images/Data Professional Survey Breakdown dasahboard screeshot.png" alt="" /></a>
 									<p>A power BI dashbord </p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Mo-Wahbi/Portfolio-Projects/blob/main/Data%20Professional%20Survey%20Breakdown.pbit" class="button">View Project</a></li>
@@ -177,4 +177,5 @@
 	</body>
 
 </html>
+
 
